# aial

./: .gitignore  CODE_WIKI_zhCN.md  CONTRIBUTING.md  Guide for AI.md  README.md  aial_output.ll  build.sh
.github/workflows/: ci.yml
aal-compiler/: .gitignore  Cargo.toml  README.md  aial.toml  ast.rs  capability.rs  interpreter.rs  ir_builder.rs  ir_lower.rs  key_manager.rs  lexer.rs  main.rs  symbol.rs  token.rs  type_checker.rs  types.rs
aial-compiler/: .gitignore  Cargo.toml  LICENSE  README.md  aial.toml  aial_bin  aial_output.ll  aial_test  aot_backend.rs  ast.rs  capability.rs  diagnostic.rs  interpreter.rs  ir.rs  ir_builder.rs  ir_lower.rs  jit_backend.rs  key_manager.rs  lexer.rs  llvm_backend.rs  main.rs  parser.rs  philosophy.rs  symbol.rs  token.rs  type_checker.rs  types.rs
aial-compiler/examples/: 01_hello.aal  02_parallel.aal  03_budget.aal  04_loop.aal  05_match.aal  06_webui.aal  07_json.aal  08_chat.aal  aial_lexer.aal  aial_parser.aal  hello_agent.aal
aial-compiler/tests/: integration.rs
aial-rt/: Cargo.toml
aial-rt/src/: actor.rs  ai.rs  collections.rs  context_memory.rs  convert.rs  ffi.rs  file.rs  global.rs  http.rs  io.rs  json.rs  key.rs  lib.rs  line_editor.rs  process.rs  string.rs  term.rs  time.rs
aial-vscode/: CHANGELOG.md  README.md  package.json
aial-vscode/syntaxes/: aial.tmLanguage.json
docs/: GRAMMAR.md  IR.md  PHILOSOPHY.md  STDLIB.md  TYPE_SYSTEM.md
selfhost/: compiler.aal  hello.aal  lexer.aal  parser.aal
