[package]
name = "aial"
version = "0.1.0"
edition = "2021"
description = "AIAL (AI-Agent Language) / 枢言语言 编译器"

[[bin]]
name = "aial"
path = "main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-jit = "0.131"
cranelift-module = "0.131"
cranelift-native = "0.131"
cranelift-object = "0.131"
# llvm-ir removed — generating .ll text directly, no LLVM needed

[dependencies.aial-rt]
path = "../aial-rt"
