[package]
name = "aial-rt"
version = "0.1.0"
edition = "2021"
description = "AIAL runtime — extern C functions for AOT compilation linkage"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
libc = "0.2"
crossterm = { version = "0.28", features = ["events"] }
unicode-width = "0.1"
